# Apuntes_EDD

./: CMakeLists.txt  main.c
Alumnos/: Alumnos Enunciado.txt  Alumnos.c
CandidatoGanador/: candidatoGanador.c
CandidatoQuitar/: candidatoQuitar.c
Dumbo/: dumbo.c
Fundaciones/: fundaciones.c
INFTube/: INFtube.c
Loteria/: loteriaV2.c
Modulo1_Array/Ejercicios/Alumnos/: alumnos.c
Modulo1_Array/Ejercicios/AutosF1/: autosF1.c
Modulo1_Array/Ejercicios/Aviones/: Aviones Enunciado.txt  aviones.c
Modulo1_Array/Ejercicios/CandidatoGanador/: CandidatoGanador Enunciado.txt  candidatoGanador.c
Modulo1_Array/Ejercicios/CandidatoQuitar/: candidatoQuitar.c
Modulo1_Array/Ejercicios/Dumbo/: Dumbo Enunciado.txt  dumbo.c
Modulo1_Array/Ejercicios/Fundaciones/: fundaciones.c
Modulo1_Array/Ejercicios/INFTube/: INFtube Enunciado.txt  INFtube.c
Modulo1_Array/Ejercicios/Loteria/: LoteriaV2 Enunciado.txt  loteriaV2.c
Modulo1_Array/Ejercicios/Spotify/: spotify.c
Modulo1_Array/Evaluaciones/Control_1/: controlCatedra_1.c
Modulo1_Array/Evaluaciones/Control_2/: Control2 Enunciado.txt  controlArrays2.c
Modulo1_Array/Evaluaciones/Prueba/: Prueba Enunciado.txt  prueba1.c
Modulo2_LinkedList/Ejercicios/Alumnos/: AlumnosEnlazados Enunciado.txt  alumnosEnlazados.c
Modulo2_LinkedList/Ejercicios/Formula1/: formula1.c
Modulo2_LinkedList/Ejercicios/GanadoresYTramposos/: ganadoresYTramposos.c
Modulo2_LinkedList/Ejercicios/Inversiones/: inversiones.c
Modulo2_LinkedList/Ejercicios/Ladrones/: ladrones.c
Modulo2_LinkedList/Ejercicios/LosMasVotados/: Los Más Votados Enunciado.txt  losMasVotados.c
Modulo2_LinkedList/Ejercicios/Medievo/: Medievo Enunciado.txt  medievo.c
Modulo2_LinkedList/Ejercicios/Repartos/: Repartos Enunciado.txt  repartos.c
Modulo2_LinkedList/Ejercicios/Servel/: Servel Enunciado.txt  servel.c
Modulo2_LinkedList/Ejercicios/SistemaTelefonico/: Sistema Telefonico Enunciado.txt  sistemaTelefonico.c
Modulo2_LinkedList/Ejercicios/SistemaTransporte/: sistemaTransporte.c
Modulo2_LinkedList/Ejercicios/Supermercado/: supermercado.c
Modulo2_LinkedList/Evaluaciones/Control/: control1M2.c
Modulo2_LinkedList/Evaluaciones/prueba/: prueba2.c
Modulo2_LinkedList/Funciones_Basicas/: circularesSimplementeEnlazadas.c  listasDoblementeEnlazadas.c  listasSimplementeEnlazadas.c
Modulo_1/Ejercicios/Aviones/: aviones.c
Modulo_1/Ejercicios/CandidatoQuitar/: candidatoQuitar.c
Modulo_1/Ejercicios/Fundaciones/: Fundaciones Enunciado.txt
Modulo_1/Ejercicios/Spotify/: Spotify Enunciado.txt
Modulo_1_Array/Ejercicios/CandidatoQuitar/: CandidatoQuitar Enunciado.txt
Modulo_1_Array/Ejercicios/INFTube/: INFtube.c
