cmake_minimum_required(VERSION 3.30)
project(Apuntes_EDD C)

set(CMAKE_C_STANDARD 90)

add_executable(autosF1 Modulo_1/Ejercicios/AutosF1/autosF1.c)
add_executable(candidatoGanador Modulo_1/Ejercicios/CandidatoGanador/candidatoGanador.c)
add_executable(candidatoQuitar Modulo_1/Ejercicios/CandidatoQuitar/candidatoQuitar.c)
add_executable(dumbo Modulo_1/Ejercicios/Dumbo/dumbo.c)
add_executable(fundaciones Modulo_1/Ejercicios/Fundaciones/fundaciones.c)
add_executable(inftube Modulo_1/Ejercicios/INFTube/INFtube.c)
add_executable(loteria Modulo_1/Ejercicios/Loteria/loteriaV2.c)
add_executable(Alumnos Modulo_1/Ejercicios/Alumnos/Alumnos.c)
