cmake_minimum_required(VERSION 3.30)
project(Apuntes_EDD C)

set(CMAKE_C_STANDARD 90)

add_executable(autosF1 Modulo1_Array/Ejercicios/AutosF1/autosF1.c)
add_executable(candidatoGanador Modulo1_Array/Ejercicios/CandidatoGanador/candidatoGanador.c)
add_executable(candidatoQuitar Modulo1_Array/Ejercicios/CandidatoQuitar/candidatoQuitar.c)
add_executable(dumbo Modulo1_Array/Ejercicios/Dumbo/dumbo.c)
add_executable(fundaciones Modulo1_Array/Ejercicios/Fundaciones/fundaciones.c)
add_executable(inftube Modulo1_Array/Ejercicios/INFTube/INFtube.c)
add_executable(loteria Modulo1_Array/Ejercicios/Loteria/loteriaV2.c)
add_executable(Alumnos Modulo1_Array/Ejercicios/Alumnos/Alumnos.c)
add_executable(controlArrays1 Modulo1_Array/Evaluaciones/Control_1/controlArray1.c)
add_executable(spotify Modulo1_Array/Ejercicios/Spotify/spotify.c)
add_executable(aviones Modulo1_Array/Ejercicios/Aviones/aviones.c)
add_executable(listasSimplementeEnlazadas Modulo2_LinkedList/Funciones_Basicas/listasSimplementeEnlazadas.c)
add_executable(listasDoblementeEnlazadas Modulo2_LinkedList/Funciones_Basicas/listasDoblementeEnlazadas.c)
add_executable(alumnosEnlazados Modulo2_LinkedList/Ejercicios/Alumnos/alumnosEnlazados.c)
add_executable(controlArrays2 Modulo1_Array/Evaluaciones/Control_2/controlArrays2.c)
add_executable(medievo Modulo2_LinkedList/Ejercicios/Medievo/medievo.c)
add_executable(sistemaTransporte Modulo2_LinkedList/Ejercicios/SistemaTransporte/sistemaTransporte.c)
add_executable(sistemaTelefonico Modulo2_LinkedList/Ejercicios/SistemaTelefonico/sistemaTelefonico.c)
add_executable(ladrones Modulo2_LinkedList/Ejercicios/Ladrones/ladrones.c)
add_executable(circularesSimplementeEnlazadas Modulo2_LinkedList/Funciones_Basicas/circularesSimplementeEnlazadas.c)
add_executable(inversiones Modulo2_LinkedList/Ejercicios/Inversiones/inversiones.c)
add_executable(prueba1 Modulo1_Array/Evaluaciones/Prueba/prueba1.c)
add_executable(formula1 Modulo2_LinkedList/Ejercicios/Formula1/formula1.c)
